--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ scikit-learn
 matplotlib
 seaborn
 wandb
-torch
+torch==1.10.0+cu102 torchvision==0.11.1+cu102 torchaudio===0.10.0+cu102 -f https://download.pytorch.org/whl/cu102/torch_stable.html
 tqdm
