--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+ipykernel
+ipython
 numpy
 scikit-learn
 matplotlib
@@ -5,3 +7,5 @@ seaborn
 wandb
 torch==1.10.0+cu102 torchvision==0.11.1+cu102 torchaudio===0.10.0+cu102 -f https://download.pytorch.org/whl/cu102/torch_stable.html
 tqdm
+Pillow
+
